# AndroidIM-

./: .gitignore  README.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/androidim/: IMApplication.kt
app/src/main/java/com/example/androidim/model/: ChatMessage.kt  ErrorResponse.kt  FriendModels.kt  GroupModels.kt  LoginRequest.kt  LoginResponse.kt  RegisterRequest.kt  RegisterResponse.kt  UserInfo.kt  UserListResponse.kt
app/src/main/java/com/example/androidim/network/: IMClient.kt
app/src/main/java/com/example/androidim/protocol/: MessageDecoder.kt  MessageEncoder.kt  MessageType.kt
app/src/main/java/com/example/androidim/repository/: IMRepository.kt
app/src/main/java/com/example/androidim/ui/chat/: ChatActivity.kt  ChatAdapter.kt  ChatViewModel.kt
app/src/main/java/com/example/androidim/ui/main/: MainActivity.kt  (+1 more)
app/src/main/java/com/example/androidim/utils/: NotificationManager.kt
app/src/main/res/anim/: scale_animation.xml
app/src/main/res/drawable/: badge_background.xml
app/src/main/res/layout/: activity_chat.xml  activity_create_group.xml  activity_friend_apply.xml  activity_friend_list.xml  activity_group_chat.xml  activity_group_detail.xml  activity_group_list.xml  activity_login.xml  activity_main.xml  activity_new_friend.xml  activity_note_detail.xml  activity_note_edit.xml  activity_note_list.xml  activity_permission.xml  activity_recycler_view.xml  activity_select_members.xml  activity_task_edit.xml  activity_task_list.xml  activity_user_detail.xml  activity_user_edit.xml  activity_user_list.xml  dialog_update_group_info.xml  fragment_user_detail.xml  item_chat_message.xml  item_friend.xml  item_group.xml  item_group_member.xml  item_new_friend.xml  item_note.xml  item_select_member.xml  item_task.xml  item_user.xml
app/src/main/res/menu/: menu_group_chat.xml  menu_group_detail.xml  task_list_menu.xml
app/src/main/res/values/: colors.xml  strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
server/: CMakeLists.txt
server/database/: init.sql  update_add_groups.sql
server/src/: main.cpp
server/src/database/: database.cpp  database.h
server/src/handler/: friend_handler.cpp  friend_handler.h  group_handler.cpp  group_handler.h  login_handler.cpp  login_handler.h  message_handler.cpp  message_handler.h  user_handler.cpp  user_handler.h
server/src/protocol/: decoder.cpp  decoder.h  encoder.cpp  encoder.h  message.h
server/src/server/: epoll_server.cpp  epoll_server.h
server/src/thread_pool/: thread_pool.cpp  thread_pool.h
server/src/utils/: logger.cpp  logger.h
(+26 files in other folders)
